# Chzzk-Data-Analytics

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  db_status.py  orchestrator.py  pyproject.toml  run_pipeline.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
classes/: base.py  chzzk.py
components/: chzzk_chat_crawl.py  chzzk_streaming_check.py  consumer.py  consumer_chat.py  consumer_streaming.py  keyword_analyzer.py  producer.py  streaming_check.py
dashboard/: app.py  crawler_manager.py  style.py
dashboard/.streamlit/: config.toml
dashboard/pages/: 1_streamers.py  2_stats.py  3_database.py  4_kafka.py  5_keywords.py
docker/: Dockerfile  docker-compose.yaml
modules/: config.py
modules/chzzk/: api.py  chat.py  constants.py  emoji.py  enums.py
modules/kafka/: consumer.py  producer.py
modules/postgresql/: __init__.py  schema.py
pipelines/: crawl_chat.yaml
