[project]
name = "chzzk-data-analytics"
version = "0.1.0"
description = "Chzzk streaming data collection and analytics pipeline"
authors = [
    {name = "uowol", email = "alllhvhla@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.32.3",
    "pydantic>=2.11.5",
    "python-dotenv>=1.0.0",
    "websocket-client>=1.8.0",
    "kafka-python>=2.2.13",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.uv]
package = false
